@@ -4,6 +4,7 @@ See the end for copying conditions.
 
 - 1.7 | NOT YET RELEASED
   - new var: ‘aa2u-uniform-weight’
+  - new command: ‘aa2u-rectangle’
 
 - 1.6 | 2014-05-09
   - fix regression for interactive invocation w/o active region
